@@ -5,20 +5,49 @@ Should it be a sim. experiment of e.g. evolutionary trajectory developments, or 
 cellular automata?...
 
 ------------------------------------------------------------------------------
-DEVELOPMENT:
+DEPS.:
+	- MSVC (-std:c++latest; ++20 is fine, unless actually using <format>)
+	- SFML 2.6.x (using a4bca205 off the main branch actually)
+	- openal32.dll (for audio) - even if linked with the static SFML libs, this
+	  will still be loaded (just like the MSVC runtime DLLs -- see below)!
 
-Deps.:
-	MSVC (-std:c++latest -- ++20 is fine, unless actually using <format>)
-	SFML 2.6.x (using a4bca205 off the main branch actually)
+BUILD:
+	Set `_sfml_libroot_=` in `devtool/_setenv.cmd` to match your setup!
+	Make sure the MSVC CLI tools (CL, LINK, NMAKE etc.) are on the path!
 
-Build:
-	??  Why the hell is the static-built exe a) so small, b) EVEN SMALLER THAN THE DLL BUILD?!
-	    (Obviously the C++ runtime still comes from a DLL, but still.
-	    Yes, confirmed the SFML bits are really statically linked, by renaming sfml/bin
-	    and it still seeing it run fine.)
+	Build with statically linked SFML libs:
 
+		build.cmd
 
-SFML-related threading caveats:
+	or, for the SFML DLLs:
+
+		build.cmd SFML_DLL=1
+
+	Delete out/*.obj (or the whole "out" folder) before switching link mode!
+
+	For a debug build, add DEBUG=1 to the `build` cmd (`build DEBUG=1`).
+
+	(If you use the binary release of SFML, and would like a fully static link
+	that also includes the MSVC runtime, trying to compile with -MT here would
+	be futile... SFML is built with -MD (for loading the MSVC runtime from
+	DLLs), so it would require a complete SFML rebuild from sources with -MT.)
+
+??	For quite a while, the static-linked exe was pretty small, <300K. Then
+	I haven't checked for a while, and when I added sound, that made it
+	~2MB immediately. Then, even if I removed all the SFML sound code, the
+	exe was still >800K! Why?!
+
+??	Why the hell was the static-built exe EVEN SMALLER THAN THE DLL BUILD?!
+	(Only when built with no audio, and in the early 300K days, always fully
+	rebuilt with a single CL command from the old batch files.)
+
+??	Why the hell was there a significant difference between a static exe size
+	when built with a single CL command (bigger), and when built from separate
+	.obj modules (smaller)?! (Using the same CL options.)
+
+MISC.:
+
+- SFML-related threading caveats:
 
 	https://stackoverflow.com/a/23921645/1479945
 	https://en.sfml-dev.org/forums/index.php?topic=14120.0
