@@ -1,5 +1,4 @@
 ﻿@echo off
-
-call _setenv.cmd
+call %~dp0devtool/_setenv.cmd
 
 %sz_out_dir%/%sz_appname%.exe %*
